Fix #114521: Walk navigation global up does not work

Mistake in 93f60016833db1d7fe6122571e75e10da5800c05

Pull Request: https://projects.blender.org/blender/blender/pulls/114526